2010-09-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-put-image): Allow images to be removed.
	(gnus-html-wash-tags): Add a new `i' command to insert images.
	(gnus-html-insert-image): New command and keystroke.
	(gnus-html-redisplay-with-images): New command and keystroke.
	(gnus-html-show-images): Renamed command.
	(gnus-html-wash-tags): Remove more white space before <pre_int> image
	spacers.
	(gnus-html-wash-tags): Decode entities at the end, so that entities
	inside the tags don't mess up the rest of the "parsing".

	* gnus-agent.el (gnus-agent-auto-agentize-methods): Change the default
	so that nnimap methods aren't agentized by default.  There's apparently
	many problems related to agent/imap behaviour.

	* gnus-art.el (gnus-article-copy-string): New command and key binding.

	* gnus-html.el: Doc fix.

2010-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-html-put-image): Use gnus-graphic-display-p,
	glyph-width and glyph-height instead of display-graphic-p and
	image-size; make avoidance of displaying small images work for XEmacs.

	* gnus-util.el (gnus-graphic-display-p): Use device-on-window-system-p
	for XEmacs.

	* gnus-ems.el (gnus-set-process-plist, gnus-process-plist): Change name
	of symbol that holds plist data.
	(gnus-process-plist): Remove plist of process after getting it.

2010-09-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-generate-hashcash): Change default to
	'opportunistic if hashcash is installed.

	* gnus-html.el (gnus-html-rescale-image): Fix up typo in rescaling.
	(gnus-html-put-image): Only call image-size once, since it's somewhat
	time-consuming on remote X servers.

2010-09-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-article-html): Make work buffer multibyte for
	decoded contents.
	(gnus-html-put-image, gnus-html-rescale-image): Pass `file' argument.

2010-09-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>
